no-issue: Title alignment

--- a/src/main/webapp/static/themes/light/modules/_lecture.scss
+++ b/src/main/webapp/static/themes/light/modules/_lecture.scss
@@ -44,6 +44,11 @@
 	}
 }
 
+.o_lectures_cockpit {
+	h3 {
+		margin-top: 0;
+	}
+}
 .o_header_with_buttons .o_day_chooser {
 	position: relative;
 	float: right;
